syntax = "proto3";
import "timestamp.proto";

package yaroc;

message Disconnected { string client_name = 1; }

enum EventType {
  Unknown = 0;
  Added = 1;
  Removed = 2;
}

message DeviceEvent {
  string port = 1;
  EventType type = 2;
}

message Coordinates {
  float latitude = 1;
  float longitude = 2;
  float altitude = 3;
  Timestamp time = 4;
}

enum CellNetworkType {
  UnknownNetworkType = 0;
  Lte = 1;
  Umts = 2;
  LteM = 3;
  NbIotEcl0 = 4;
  NbIotEcl1 = 5;
  NbIotEcl2 = 6;
}

message MiniCallHome {
  uint32 local_ip = 1;
  float cpu_temperature = 2;
  uint32 freq = 3;
  uint32 min_freq = 4;
  uint32 max_freq = 5;
  uint32 millivolts = 6;
  sint32 rsrp_dbm = 7;
  sint32 signal_snr_cb = 8; // SNR in centibells
  uint32 cellid = 9;
  CellNetworkType network_type = 10;
  repeated uint32 codes = 11;
  uint64 totaldatarx = 12;
  uint64 totaldatatx = 13;
  Timestamp time = 14;
}

message Status {
  oneof msg {
    Disconnected disconnected = 1;
    MiniCallHome mini_call_home = 2;
    DeviceEvent dev_event = 3;
  }
}
